Update user guide

--- a/public/Guide/11_Reports.htm
+++ b/public/Guide/11_Reports.htm
@@ -15,7 +15,7 @@
 <div class="WordSection3">
 <div style=
 "border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in">
-<h1><a name="_Toc433701877">Reports</a></h1>
+<h1><a name="_Toc470698541">Reports</a></h1>
 </div>
 <p class="MsoNormal">Reports can be run based on virtually any of
 the data maintained within the database.</p>
@@ -43,7 +43,7 @@ report.</p>
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 The executed report is displayed in a table.</p>
 <p class="MsoNormal">&nbsp;</p>
-<p class="MsoNormal">Many of the standard reports (i.e., ones with
+<p class="MsoNormal">Many of the standard reports (i.e., those with
 less formatting) can be exported to a Comma Separated Value (CSV)
 file that can be opened by third-party applications such as
 Microsoft Excel. To export a Report to CSV:</p>
