--- a/public/Guide/14_Settings.htm
+++ b/public/Guide/14_Settings.htm
@@ -15,7 +15,7 @@
 <div class="WordSection3">
 <div style=
 "border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in">
-<h1><a name="_Toc433701887">Settings</a></h1>
+<h1><a name="_Toc470698551">Settings</a></h1>
 </div>
 <div style=
 'border:solid #4F81BD 1.0pt;padding:3.0pt 3.0pt 3.0pt 3.0pt; background:#FDFFE5'>
@@ -23,31 +23,34 @@
 </div>
 <p class="MsoNormal">Provider Administrators are responsible for
 maintaining information about the Provider:</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 List of common addresses;</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Editors and Users for the Provider;</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Provider-level system configurations; and,</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Extent of the Provider region and Dispatch view center.</p>
 <p class="MsoNormal">A Provider Administrator can access this
 information via the <span class="ButtonChar">Settings</span>
 tab.</p>
-<h2><a name="_Toc433701888">Addresses</a></h2>
-<p class="MsoNormal">All Trips created within the system need to be
-between defined addresses. These addresses can either be created at
-the same time as the Trip, or common addresses can be uploaded into
-the system that then can be used for any Trip.</p>
-<h3><a name="node63" id="node63"></a>Search Addresses</h3>
+<h2><a name="_Toc470698552">Addresses</a></h2>
+<p class="MsoNormal">All Trips created within the system need to
+include defined addresses for both trip origin and trip
+destination. Common addresses—for example, a hospital or a veteran
+center—can be uploaded into the system in batch mode, after which
+they will be available when entering Trip origin and destination
+information. The system also allows for less common addresses to be
+created on the fly, if needed, when entering a new Trip.</p>
+<h3><a name="node28" id="node28"></a>Search Addresses</h3>
 <p class="MsoNormal">To find an existing Address:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -57,7 +60,7 @@ Addresses:” textbox and click <span class=
 <p class="MsoListNumber">2.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 All addresses that match the search term are displayed.</p>
-<h3><a name="node64" id="node64"></a>Add a new Address</h3>
+<h3><a name="node29" id="node29"></a>Add a new Address</h3>
 <p class="MsoNormal">Individual common addresses can be added:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -68,8 +71,12 @@ An Address dialog is displayed. Enter the details of the new
 address.</p>
 <p class="MsoListNumber">3.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+If you wish to enter a P.O. Box (or other non-street address),
+select the “Non-street Mailing Address (P.O. Box)” check-box.</p>
+<p class="MsoListNumber">4.<span style=
+'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <span class="ButtonChar">Save</span> to save the address.</p>
-<h3><a name="node65" id="node65"></a>Edit an existing Address</h3>
+<h3><a name="node30" id="node30"></a>Edit an existing Address</h3>
 <p class="MsoNormal">Existing addresses can be edited. To edit:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -86,7 +93,7 @@ appropriate.</p>
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <span class="ButtonChar">Save</span> to update the
 address.</p>
-<h3><a name="node66" id="node66"></a>Delete an existing
+<h3><a name="node31" id="node31"></a>Delete an existing
 Address</h3>
 <p class="MsoNormal">To delete an existing address:</p>
 <p class="MsoListNumber">1.<span style=
@@ -104,7 +111,7 @@ in top-right corner of the form.</p>
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 A confirmation dialog is displayed. Click <span class=
 "ButtonChar">Confirm</span> to delete the address.</p>
-<h3><a name="node67" id="node67"></a>Upload Addresses</h3>
+<h3><a name="node32" id="node32"></a>Upload Addresses</h3>
 <p class="MsoNormal">Common addresses used to help define trip
 origins and destinations can be uploaded from a file:</p>
 <p class="MsoListNumber">1.<span style=
@@ -313,11 +320,14 @@ abbreviation</p>
 <p class="MsoListNumber">3.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 The addresses within the selected file will be loaded.</p>
-<h2><a name="_Toc433701889">Users</a></h2>
+<h2><a name="_Toc470698553">Users</a></h2>
 <p class="MsoNormal">The Users for a Provider can log into
 RidePilot and view and/or update Customers, Drivers, Trips, and
 Runs, and schedule Trips depending upon their assigned role.</p>
-<h3><a name="node68" id="node68"></a>Create User</h3>
+<p class="MsoNormal">Each user is identified by an email address.
+You may change a user’s email address by clicking the Change Email
+button next to each user’s email.</p>
+<h3><a name="node33" id="node33"></a>Create User</h3>
 <p class="MsoNormal">To create a new User for the current
 Provider:</p>
 <p class="MsoListNumber">1.<span style=
@@ -351,7 +361,7 @@ current Provider.</p>
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <span class="ButtonChar">Create User</span> to create the
 user.</p>
-<h3><a name="node69" id="node69"></a>Delete User</h3>
+<h3><a name="node34" id="node34"></a>Delete User</h3>
 <p class="MsoNormal">To delete an existing User for the current
 Provider:</p>
 <p class="MsoListNumber">1.<span style=
@@ -362,70 +372,49 @@ appropriate User in the “Users” panel.</p>
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <span class="ButtonChar">OK</span> in the confirmation
 dialog.</p>
-<h2><a name="_Toc433701890">Provider-Level Configuration</a></h2>
+<h2><a name="_Toc470698554">Provider-Level Configuration</a></h2>
 <p class="MsoNormal">Some functionality within the system can be
 configured at a Provider level.</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Configure Operating Hours. The daily hours the Provider
 operates.</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Dispatch. Should the <span class="ButtonChar">Dispatch</span> tab
 be visible?</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Scheduling. Should users be able to schedule Trips?</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Trip Times Gap. The default time gap (in minutes) between the Trip
 pickup time and the drop off time.</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Fields required for a run to be considered valid. What fields are
 required for a Run to be considered completed?</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Reimbursement Rates. Provider-specific program reimbursement
 rates.</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
-Device Pools. Create and manage provider-specific device pools.</p>
-<table class="TCMSHelp" border="1" cellspacing="0" cellpadding="0"
-width="636" style=
-'width:477.0pt;margin-left:1.25pt;border-collapse:collapse;border:none'>
-<tr>
-<td width="48" valign="top" style=
-'width:.5in;border:solid #943634 1.0pt; border-right:none;background:#F2F2F2;padding:5.75pt 5.75pt 5.75pt 5.75pt'>
-<p class="Help"><i><img border="0" width="29" height="29" src=
-"guide_files/image012.png" alt="image"></i></p>
-</td>
-<td width="588" valign="top" style=
-'width:441.0pt;border:solid #943634 1.0pt; border-left:none;background:#F2F2F2;padding:5.75pt 5.75pt 5.75pt 5.75pt'>
-<p class="MsoNormal"><i><span style='color:black'>About device
-pools: they are used exclusively for the simple dispatch system
-that requires an Android app to run on GPS-equipped tablets or
-smartphones</span></i><i><span style='color:black'>.</span></i>
-<i><span style='color:black'>In the dispatch web interface, devices
-are grouped into device pools using a tree widget. Each pool has a
-name and an associated color. The color is used for the pins that
-mark the location of the device in that pool on a Google
-map.</span></i></p>
-</td>
-</tr>
-</table>
-<p class="MsoListBullet"><span style=
+Device Pools. Create and manage provider-specific device pools
+(note that this functionality is not current applicable for the UTA
+deployment).</p>
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Region Boundaries. Extent of the Provider region.</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Dispatch View. The center and zoom level to use for the default
