--- a/public/Guide/15_RidePilotHelp.htm
+++ b/public/Guide/15_RidePilotHelp.htm
@@ -15,7 +15,7 @@
 <div class="WordSection3">
 <div style=
 "border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in">
-<h1><a name="_Toc433701891">RidePilot Help</a></h1>
+<h1><a name="_Toc470698555">RidePilot Help</a></h1>
 </div>
 <div style=
 'border:solid #4F81BD 1.0pt;padding:3.0pt 3.0pt 3.0pt 3.0pt; background:#FDFFE5'>
@@ -25,27 +25,27 @@
 workflows and terms that may not be obvious or familiar to users,
 and so could benefit from additional explanation. To allow
 flexibility, RidePilot can provide the help:</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 As part of this Guide;</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 As pop-up context-sensitive help associated with each panel,
 accessible via the <img border="0" width="18" height="17" id=
 "Picture 65" src="guide_files/image034.png" alt="image" name=
 "Picture 65">&nbsp;in the top-right corner of the panel; and/or</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 As pop-up context-sensitive help associated with each displayed
 label, accessible via the <img border="0" width="18" height="17"
 id="Picture 89" src="guide_files/image034.png" alt="image" name=
-"Picture 89">&nbsp;in the top-right corner of the panel.</p>
+"Picture 89">&nbsp;adjacent to the label.</p>
 <p class="MsoNormal">Each of these help methods are described
 below.</p>
-<h2><a name="_Toc433701892">RidePilot Guide</a></h2>
+<h2><a name="_Toc470698556">RidePilot Guide</a></h2>
 <p class="MsoNormal">While this RidePilot Guide does cover the
 basic trip planning functionality within RidePilot, it is targeted
 at novice users as most of the functionality within the system
@@ -53,7 +53,7 @@ should be self-explanatory.</p>
 <p class="MsoNormal">As new functionality is implemented within
 RidePilot, this guide should be enhanced to incorporate references
 to this additional functionality.</p>
-<h2><a name="_Toc433701893">Panel Help</a></h2>
+<h2><a name="_Toc470698557">Panel Help</a></h2>
 <p class="MsoNormal">Help can be associated with each panel
 displayed within RidePilot. Panel help is available if there is a
 <img border="0" width="18" height="17" id="Picture 161" src=
@@ -61,7 +61,7 @@ displayed within RidePilot. Panel help is available if there is a
 the top-right corner of the panel. The help is displayed in a
 pop-up window by hovering the mouse pointer over the <img border=
 "0" width="18" height="17" id="Picture 163" src=
-"guide_files/image035.png" alt="image" name="Picture 163">.</p>
+"guide_files/image034.png" alt="image" name="Picture 163">.</p>
 <p class="MsoNormal">The panel help is maintained by the System
 Administrator using the RidePilot Translations functionality.</p>
 <p class="MsoNormal">To view the panel help source:</p>
@@ -97,7 +97,7 @@ width="636" style=
 <td width="48" valign="top" style=
 'width:.5in;border:solid #943634 1.0pt; border-right:none;background:#F2F2F2;padding:5.75pt 5.75pt 5.75pt 5.75pt'>
 <p class="Help"><i><img border="0" width="29" height="29" src=
-"guide_files/image006.png" alt="image"></i></p>
+"guide_files/image010.png" alt="image"></i></p>
 </td>
 <td width="588" valign="top" style=
 'width:441.0pt;border:solid #943634 1.0pt; border-left:none;background:#F2F2F2;padding:5.75pt 5.75pt 5.75pt 5.75pt'>
@@ -134,7 +134,7 @@ with the postfix <span class="LabelChar">_help</span>.</p>
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <span class="ButtonChar">Save</span> to save the help
 text.</p>
-<h2><a name="_Toc433701894">Label Help</a></h2>
+<h2><a name="_Toc470698558">Label Help</a></h2>
 <p class="MsoNormal">Help can be associated with each label
 displayed within RidePilot. Label in-line help is available if
 there is a <img border="0" width="18" height="17" id="Picture 171"
@@ -179,7 +179,7 @@ width="636" style=
 <td width="48" valign="top" style=
 'width:.5in;border:solid #943634 1.0pt; border-right:none;background:#F2F2F2;padding:5.75pt 5.75pt 5.75pt 5.75pt'>
 <p class="Help"><i><img border="0" width="29" height="29" id=
-"Picture 3" src="guide_files/image012.png" alt="image" name=
+"Picture 3" src="guide_files/image036.png" alt="image" name=
 "Picture 3"></i></p>
 </td>
 <td width="588" valign="top" style=
@@ -220,9 +220,6 @@ with the postfix <span class="LabelChar">_help</span>.</p>
 Click <span class="ButtonChar">Save</span> to save the help
 text.</p>
 <p class="MsoListNumber">&nbsp;</p>
-<p class="MsoNormal" align="left" style='text-align:left'>&lt;a
-href="https://s3-us-west-2.amazonaws.com/ridepilot-qa/Guide/index.html?topic=new%20vehicle"
-target="_blank"&gt;More&lt;/a&gt;</p>
 </div>
 </body>
 </html>
