--- a/public/Guide/1_Introduction.htm
+++ b/public/Guide/1_Introduction.htm
@@ -15,10 +15,10 @@
 <div class="WordSection3">
 <div style=
 "border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in">
-<h1><a name="_Toc433701828"></a><a name=
+<h1><a name="_Toc470698491"></a><a name=
 "_Toc296416724"></a><a name="_Toc296416688">Introduction</a></h1>
 </div>
-<h2><a name="_Toc433701829"></a><a name=
+<h2><a name="_Toc470698492"></a><a name=
 "_Toc396226873">Overview</a></h2>
 <p class="MsoNormal"><a name="_Toc396226874">RidePilot is an open
 source, web-based Computer Aided Scheduling and Dispatch (CASD)
@@ -26,61 +26,63 @@ software system designed to meet the needs of small scale human
 service Demand-Response Transportation (DRT) agencies. Originally
 developed for Ride Connection in Portland, OR, RidePilot allows
 authorized users to:</a></p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Maintain Customer, Driver, and Vehicle information</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Manually create and maintain Trips and Runs</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
-Allow third-party application (e.g., 1-Click|CS) to request
+Allow third-party applications (e.g., 1-Click|CS) to request
 Trips</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
-Assign Trip to Runs</p>
-<p class="MsoListBullet"><span style=
+Assign Trips to Runs</p>
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Generate Reports from virtually any tables within the underlying
 database</p>
-<h2><a name="_Toc433701830">User Types</a></h2>
+<h2><a name="_Toc470698493">User Types</a></h2>
 <p class="MsoNormal">RidePilot is designed to serve the needs of
 many different types of users, with features and functions
 appropriate for each one:</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
-Customers are individuals who will be assisted by RidePilot Users
-to meet their DRT service needs. While they cannot log directly
-into RidePilot, accounts must be created for each one.</p>
-<p class="MsoListBullet"><span style=
+Customers are individuals who will receive DRT services from the
+agencies that use RidePilot. An account must be created for each
+customer within RidePilot, although customers cannot log directly
+into the system.</p>
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
-Users directly use RidePilot when assisting Customers, creating and
-maintaining Trips and Runs, and assigning Trips to Runs.</p>
-<p class="MsoListBullet"><span style=
+Users are service provider staff that make use of RidePilot when
+assisting Customers, creating and maintaining Trips and Runs, and
+assigning Trips to Runs.</p>
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Editors are advanced Users who can access additional functionality
 within RidePilot.</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Provider Administrators are representatives of organizations that
-provide DRT services. They can manage and maintain information on
-the Provider.</p>
-<p class="MsoListBullet"><span style=
+provide DRT services who are authorized to manage and maintain
+information on the Provider.</p>
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
-System Administrators are the “super-users” who take care of the
+System Administrators are the “super-users” who maintain the
 RidePilot software.</p>
-<p class="MsoNormal">The functionality available to each of these
-user types are described in this Guide.</p>
+<p class="MsoNormal">The remainder of this Guide describes the
+features available to each of these user types.</p>
 <p class="MsoNormal">&nbsp;</p>
 <p class="MsoNormal">&nbsp;</p>
 <p class="MsoNormal" align="center" style='text-align:center'>
