--- a/public/Guide/2_AccessingRidePilot.htm
+++ b/public/Guide/2_AccessingRidePilot.htm
@@ -17,7 +17,7 @@
 "border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in">
 <h1 style=
 'margin-top:0in;margin-right:0in;margin-bottom:6.0pt;margin-left: .3in;text-indent:-.3in'>
-<a name="_Toc298332198"></a><a name="_Toc433701831"></a><a name=
+<a name="_Toc298332198"></a><a name="_Toc470698494"></a><a name=
 "_Toc396226880"></a><a name="_Users_and_Roles"></a><a name=
 "_M-PACT_Users_and_Roles"></a><a name=
 "_Performance_Measures"></a><a name=
@@ -30,22 +30,22 @@
 "_Definitions_and_Hierarchy"></a><a name=
 "_Emphasis_Area"></a>Accessing RidePilot</h1>
 </div>
-<p class="MsoNormal">RidePilot is implemented as a web application
-that provides an enhanced user experience with cross-browser
-compatibility.</p>
+<p class="MsoNormal">RidePilot is implemented as a web-based
+application that provides an enhanced user experience with
+cross-browser compatibility.</p>
 <p class="MsoNormal">To access RidePilot, you need:</p>
-<p class="MsoListBullet" style='margin-bottom:6.0pt'><span style=
-'font-family: Symbol'>·<span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
+'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 A desktop computer, tablet or mobile device</p>
-<p class="MsoListBullet" style='margin-bottom:6.0pt'><span style=
-'font-family: Symbol'>·<span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
+'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 An internet connection</p>
-<p class="MsoListBullet" style='margin-bottom:6.0pt'><span style=
-'font-family: Symbol'>·<span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
+'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
-A HTML5-compatible internet web browser:</p>
+A HTML5-compatible internet web browser such as:</p>
 <div align="center">
 <table class="MsoTableSimple1" border="1" cellspacing="0"
 cellpadding="0" width="496" style=
@@ -191,8 +191,9 @@ browser.</i></p>
 </td>
 </tr>
 </table>
-<h2><a name="_Toc433701832">Login</a></h2>
-<p class="MsoNormal">RidePilot can be accessed at <a href=
+<h2><a name="_Toc470698495">Login</a></h2>
+<p class="MsoNormal">For the UTA deployment, RidePilot can be
+accessed at <a href=
 "https://ridepilot.rideuta.com/">https://ridepilot.rideuta.com/</a>.</p>
 <p class="MsoNormal">Once the page loads, you will be prompted to
 login. Enter your email and password and click Log In.</p>
@@ -203,7 +204,7 @@ width="636" style=
 <td width="48" valign="top" style=
 'width:.5in;border:solid #943634 1.0pt; border-right:none;background:#F2F2F2;padding:5.75pt 5.75pt 5.75pt 5.75pt'>
 <p class="Help"><i><img border="0" width="29" height="29" src=
-"guide_files/image006.png" alt="image"></i></p>
+"guide_files/image005.png" alt="image"></i></p>
 </td>
 <td width="588" valign="top" style=
 'width:441.0pt;border:solid #943634 1.0pt; border-left:none;background:#F2F2F2;padding:5.75pt 5.75pt 5.75pt 5.75pt'>
@@ -213,35 +214,37 @@ you will be emailed details on how to reset it.</i></p>
 </td>
 </tr>
 </table>
-<h2><a name="_Toc433701833">User Interface</a></h2>
+<h2><a name="_Toc470698496">User Interface</a></h2>
 <p class="MsoNormal">The basic controls of the RidePilot
 application appear on each page:</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
-Title bar containing the name of the application, who is currently
-logged in and the name of the Provider.</p>
-<p class="MsoListBullet"><span style=
+Title bar containing the name of the application, the name of the
+User who is currently logged in, and the name of the selected
+Provider (typically the Provider that the User is affiliated
+with).</p>
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 A series of tabs - Trips, Runs, etc. - that display the various
 pages within the application. Each of these tabs is described
 below.</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Page body that changes based upon the selected tab.</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Page footer indicating the version number.</p>
-<h2><a name="_Toc433701834">Logout</a></h2>
+<h2><a name="_Toc470698497">Logout</a></h2>
 <p class="MsoNormal">To log out of RidePilot, either:</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Close the web browser, or</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Click the <u><span style='color:blue'>Log out</span></u> link in
