--- a/public/Guide/3_Help.htm
+++ b/public/Guide/3_Help.htm
@@ -17,35 +17,35 @@
 "border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in">
 <h1 style=
 'margin-top:0in;margin-right:0in;margin-bottom:6.0pt;margin-left: .3in;text-indent:-.3in'>
-<a name="_Toc433701835"><span lang="IT">Help</span></a></h1>
+<a name="_Toc470698498"><span lang="IT">Help</span></a></h1>
 </div>
 <p class="MsoNormal">RidePilot help can be accessed in several
 different ways:</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 <b>Guide</b>. This user guide.</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 <b>Panel help</b>. This context-sensitive help explains the purpose
 of various panels displayed within RidePilot. The help is displayed
 within a pop-up window by hovering the mouse pointer over the
 <img border="0" width="17" height="17" id="Picture 111" src=
-"guide_files/image007.jpg" alt="image" name="Picture 111">&nbsp;in
+"guide_files/image006.jpg" alt="image" name="Picture 111">&nbsp;in
 the top-right corner of the panel.</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 <b>Label Help</b>. This context-sensitive help explains the meaning
 and purpose of the various labels displayed within RidePilot. The
 help is displayed within a pop-up window by hovering the mouse
 pointer over the <img border="0" width="17" height="17" id=
-"Picture 113" src="guide_files/image007.jpg" alt="image" name=
+"Picture 113" src="guide_files/image006.jpg" alt="image" name=
 "Picture 113">&nbsp;to the right of the label.</p>
 <p class="MsoNormal">If you still have questions, you can send an
 email to RidePilot support at <a href=
-"mailto:ridepilot@rideuta.com">ridepilot@rideuta.com</a>.</p>
+"mailto:%20ridepilotsupport@rideuta.com">&nbsp;ridepilotsupport@rideuta.com</a>.</p>
 <div style=
 "border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in">
 </div>
