--- a/public/Guide/4_Trips.htm
+++ b/public/Guide/4_Trips.htm
@@ -17,7 +17,7 @@
 "border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in">
 <h1 style=
 'margin-top:0in;margin-right:0in;margin-bottom:6.0pt;margin-left: .3in;text-indent:-.3in'>
-<a name="_Toc433701836">Trips</a></h1>
+<a name="_Toc470698499">Trips</a></h1>
 </div>
 <p class="MsoNormal">A Trip defines the details of the trip
 request, including the start and end locations, the pickup and
@@ -27,9 +27,9 @@ group that is traveling.</p>
 displays a summary of the entered Trips based on the selected
 Filter, and allows you to create new Trips, and to edit and delete
 existing Trips.</p>
-<p class="Picture"><img border="0" width="524" height="422" id=
-"Picture 239" src="guide_files/image008.png" alt="image" name=
-"Picture 239"></p>
+<p class="Picture"><img border="0" width="587" height="480" id=
+"Picture 230" src="guide_files/image007.png" alt="image" name=
+"Picture 230"></p>
 <p class="MsoNormal">The Trips page is divided into 3 areas:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -38,11 +38,12 @@ displayed in the Calendar and Table views, based on a date range
 and various Vehicle, Driver and Trip attributes;</p>
 <p class="MsoListNumber">2.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-Calendar view of the Trips; and,</p>
+Calendar view of the Trips, which includes a checkbox to hide the
+calendar from view or re-display it; and,</p>
 <p class="MsoListNumber">3.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Table view of the Trips.</p>
-<h2><a name="_Toc433701837">Trip Filters</a></h2>
+<h2><a name="_Toc470698500">Trip Filters</a></h2>
 <p class="MsoNormal">Filters can be applied to the Trips to only
 display Trips that match given criteria (e.g., with a date range,
 completed only, etc.)</p>
@@ -66,7 +67,7 @@ panel.</p>
 The Filter will be reset to the defaults, and the Calendar and
 Table views will be updated to display Trips that match the default
 filter.</p>
-<h2><a name="_Toc433701838">Display a Trip</a></h2>
+<h2><a name="_Toc470698501">Display a Trip</a></h2>
 <p class="MsoNormal">To view the details of a Trip, either:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -75,10 +76,9 @@ Click the appropriate Trip box in the Calendar view; or,</p>
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <u><span style='color:blue'>View</span></u> next to the Trip
 in the Table view.</p>
-<p class="MsoNormal">Either way, the details of the selected Trip
-will be displayed. To return to the Trips summary page, click
+<p class="MsoNormal">To return to the Trips summary page, click
 <span class="ButtonChar">Back</span>.</p>
-<h2><a name="_Toc433701839">New Trip</a></h2>
+<h2><a name="_Toc470698502">New Trip</a></h2>
 <p class="MsoNormal">To create a new Trip:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -87,9 +87,9 @@ the page.</p>
 <p class="MsoListNumber">2.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 A blank Trip details page is displayed:</p>
-<p class="Picture"><img border="0" width="524" height="422" id=
-"Picture 255" src="guide_files/image009.png" alt="image" name=
-"Picture 255"></p>
+<p class="Picture"><img border="0" width="587" height="479" id=
+"Picture 231" src="guide_files/image008.png" alt="image" name=
+"Picture 231"></p>
 <p class="MsoListNumber">3.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Enter all of the required information, and click <span class=
@@ -105,7 +105,7 @@ Trip.</p>
 <p class="MsoListNumber" align="center" style=
 'margin-left:0in;text-align:center; text-indent:0in'><img border=
 "0" width="524" height="245" id="Picture 29" src=
-"guide_files/image010.png" alt="image" name="Picture 29"></p>
+"guide_files/image009.png" alt="image" name="Picture 29"></p>
 <p class="MsoListNumber">6.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <span class="ButtonChar">No</span> to skip creating a Return
@@ -122,7 +122,7 @@ width="636" style=
 <td width="48" valign="top" style=
 'width:.5in;border:solid #943634 1.0pt; border-right:none;background:#F2F2F2;padding:5.75pt 5.75pt 5.75pt 5.75pt'>
 <p class="Help"><i><img border="0" width="29" height="29" src=
-"guide_files/image006.png" alt="image"></i></p>
+"guide_files/image010.png" alt="image"></i></p>
 </td>
 <td width="588" valign="top" style=
 'width:441.0pt;border:solid #943634 1.0pt; border-left:none;background:#F2F2F2;padding:5.75pt 5.75pt 5.75pt 5.75pt'>
@@ -134,7 +134,7 @@ Run.</span></a></i></p>
 </td>
 </tr>
 </table>
-<h2><a name="_Toc433701840">Edit Trip</a></h2>
+<h2><a name="_Toc470698503">Edit Trip</a></h2>
 <p class="MsoNormal">To edit an existing Trip:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -147,17 +147,18 @@ page.</p>
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 The Trip details will be displayed in "Edit Mode" allowing the
 values to be edited:</p>
-<p class="Picture"><img border="0" width="524" height="370" id=
-"Picture 254" src="guide_files/image011.png" alt="image" name=
-"Picture 254"></p>
+<p class="Picture"><img border="0" width="587" height="477" id=
+"Picture 232" src="guide_files/image011.png" alt="image" name=
+"Picture 232"></p>
 <p class="MsoListNumber">4.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Make the appropriate edits, and click <span class=
 "ButtonChar">Update</span> at the top-right of the page.</p>
 <p class="MsoListNumber">5.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-Assuming all of the edits are, the Trip will be updated.</p>
-<h2><a name="node36" id="node36"></a>Clone Trip</h2>
+Assuming all of the edits are validated, the Trip will be
+updated.</p>
+<h2><a name="_Toc470698504">Clone Trip</a></h2>
 <p class="MsoNormal">To clone an existing Trip:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -169,22 +170,21 @@ page.</p>
 <p class="MsoListNumber">3.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 The Trip details will be displayed in "Clone Mode" allowing the
-values to be edited:</p>
-<p class="Picture"><img border="0" width="524" height="370" id=
-"Picture 22" src="guide_files/image011.png" alt="image" name=
-"Picture 22"></p>
+values to be edited.</p>
 <p class="MsoListNumber">4.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Make the appropriate edits, and click <span class=
 "ButtonChar">Save</span> at the top-right of the page.</p>
 <p class="MsoListNumber">5.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-Assuming all of the edits are, a cloned Trip will be created.</p>
-<h2><a name="_Toc433701841">Delete Trip</a></h2>
+Assuming all of the edits are validated, a cloned Trip will be
+created.</p>
+<h2><a name="_Toc470698505">Delete Trip</a></h2>
 <p class="MsoNormal">To delete an existing Trip:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-Display the details of the existing Trip.</p>
+On the Trips page, click on the Trip you wish to deleted in order
+to display its details.</p>
 <p class="MsoListNumber">2.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <span class="ButtonChar">Delete</span> at the top-right of
