--- a/public/Guide/6_Trips-Runs.htm
+++ b/public/Guide/6_Trips-Runs.htm
@@ -15,13 +15,13 @@
 <div class="WordSection3">
 <div style=
 "border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in">
-<h1><a name="_Toc433701848">Trips-Runs</a></h1>
+<h1><a name="_Toc470698512">Trips-Runs</a></h1>
 </div>
 <p class="MsoNormal">The <span class="ButtonChar">Trips-Runs</span>
 tab allows Trips to be assigned to Runs.</p>
 <p class="MsoNormal" align="center" style='text-align:center'>
-<img border="0" width="524" height="422" id="Picture 18" src=
-"guide_files/image015.png" alt="image" name="Picture 18"></p>
+<img border="0" width="587" height="479" id="Picture 234" src=
+"guide_files/image015.png" alt="image" name="Picture 234"></p>
 <table class="TCMSHelp" border="1" cellspacing="0" cellpadding="0"
 width="636" style=
 'width:477.0pt;margin-left:1.25pt;border-collapse:collapse;border:none'>
@@ -52,12 +52,13 @@ factors including date range and various Vehicle, Driver and Run
 attributes;</p>
 <p class="MsoListNumber">2.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-Hourly view broken down by defined Runs, Cab, and Unscheduled
-Trips; and,</p>
+Hourly calendar view broken down by defined Runs, Cab, and
+Unscheduled Trips, which includes a checkbox to hide the calendar
+from view or re-display it; and,</p>
 <p class="MsoListNumber">3.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Table view of the Trips for the selected day.</p>
-<h2><a name="_Toc433701849">Trips-Runs Filter</a></h2>
+<h2><a name="_Toc470698513">Trips-Runs Filter</a></h2>
 <p class="MsoNormal">To apply a filter:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -78,7 +79,7 @@ panel.</p>
 The Filter will be reset to the defaults, and the Calendar and
 Table views will be updated to display Runs that match the default
 filter.</p>
-<h2><a name="_Toc433701850">Scheduling Trips</a></h2>
+<h2><a name="_Toc470698514">Scheduling Trips</a></h2>
 <p class="MsoNormal">To schedule an existing Trip (i.e., assign the
 Trip to an existing Run), either:</p>
 <p class="MsoListNumber">1.<span style=
@@ -99,7 +100,7 @@ radio button to the left of the Run.</p>
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <span class="ButtonChar">Schedule</span> to schedule the
 Trip.</p>
-<h2><a name="_Toc433701851">Unscheduling Trips</a></h2>
+<h2><a name="_Toc470698515">Unscheduling Trips</a></h2>
 <p class="MsoNormal">To unschedule a Trip that has been assigned to
 a Run, either:</p>
 <p class="MsoListNumber">1.<span style=
