--- a/public/Guide/8_Customers.htm
+++ b/public/Guide/8_Customers.htm
@@ -15,7 +15,7 @@
 <div class="WordSection3">
 <div style=
 "border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in">
-<h1><a name="_Toc433701855">Customers</a></h1>
+<h1><a name="_Toc470698519">Customers</a></h1>
 </div>
 <p class="MsoNormal">A Customer record captures all of the relevant
 information related to an individual or group, including contact
@@ -27,7 +27,7 @@ width="636" style=
 <td width="48" valign="top" style=
 'width:.5in;border:solid #943634 1.0pt; border-right:none;background:#F2F2F2;padding:5.75pt 5.75pt 5.75pt 5.75pt'>
 <p class="Help"><i><img border="0" width="29" height="29" src=
-"guide_files/image012.png" alt="image"></i></p>
+"guide_files/image014.png" alt="image"></i></p>
 </td>
 <td width="588" valign="top" style=
 'width:441.0pt;border:solid #943634 1.0pt; border-left:none;background:#F2F2F2;padding:5.75pt 5.75pt 5.75pt 5.75pt'>
@@ -41,9 +41,9 @@ relevant information.</i></p>
 tab displays a list of the defined Customers, and allows you to
 create new Customers, and update existing Customers.</p>
 <p class="MsoNormal" align="center" style='text-align:center'>
-<img border="0" width="524" height="422" id="Picture 27" src=
-"guide_files/image018.png" alt="image" name="Picture 27"></p>
-<h2><a name="_Toc433701856">Search Customers</a></h2>
+<img border="0" width="587" height="344" id="Picture 235" src=
+"guide_files/image018.png" alt="image" name="Picture 235"></p>
+<h2><a name="_Toc470698520">Search Customers</a></h2>
 <p class="MsoNormal">To search for a specific Customer:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -53,7 +53,7 @@ click Search.</p>
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 The table is updated to display only those Customers that match the
 search text.</p>
-<h2><a name="_Toc433701857">Display a Customer</a></h2>
+<h2><a name="_Toc470698521">Display a Customer</a></h2>
 <p class="MsoNormal">To view a Customer:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -70,7 +70,7 @@ width="636" style=
 <td width="48" valign="top" style=
 'width:.5in;border:solid #943634 1.0pt; border-right:none;background:#F2F2F2;padding:5.75pt 5.75pt 5.75pt 5.75pt'>
 <p class="Help"><i><img border="0" width="29" height="29" src=
-"guide_files/image012.png" alt="image"></i></p>
+"guide_files/image014.png" alt="image"></i></p>
 </td>
 <td width="588" valign="top" style=
 'width:441.0pt;border:solid #943634 1.0pt; border-left:none;background:#F2F2F2;padding:5.75pt 5.75pt 5.75pt 5.75pt'>
@@ -80,7 +80,7 @@ Trip for the Customer by clicking</i> <span class=
 </td>
 </tr>
 </table>
-<h2><a name="_Toc433701858">New Customer</a></h2>
+<h2><a name="_Toc470698522">New Customer</a></h2>
 <p class="MsoNormal">To create a new Customer, either as an
 individual or a group:</p>
 <p class="MsoListNumber">1.<span style=
@@ -91,9 +91,9 @@ page, as appropriate.</p>
 <p class="MsoListNumber">2.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 A blank Customer details page is displayed:</p>
-<p class="Picture"><img border="0" width="524" height="422" id=
-"Picture 9" src="guide_files/image019.png" alt="image" name=
-"Picture 9"></p>
+<p class="Picture"><img border="0" width="587" height="471" id=
+"Picture 236" src="guide_files/image019.png" alt="image" name=
+"Picture 236"></p>
 <p class="MsoListNumber">3.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Enter all of the required information, and click <span class=
@@ -118,7 +118,7 @@ Customer.</i></p>
 </td>
 </tr>
 </table>
-<h2><a name="_Toc433701859">Edit Customer</a></h2>
+<h2><a name="_Toc470698523">Edit Customer</a></h2>
 <p class="MsoNormal">To edit an existing Customer:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -139,22 +139,22 @@ Make the appropriate edits, and click <span class=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Assuming all of the edits are validated, the Customer will be
 updated.</p>
-<h2><a name="_Toc433701860">Merge Customers</a></h2>
+<h2><a name="_Toc470698524">Merge Customers</a></h2>
 <p class="MsoNormal">For various reasons, multiple records for the
-same Customer may be created. For example, the same Customer makes
-separate requests to multiple Providers who each create a Customer
-record. These multiple records can be merged together to create a
-single record to which all of the associated Trips are attached. To
-merge Customer records:</p>
+same Customer may be created. For example, the same Customer could
+make separate requests to multiple Providers who each create a
+Customer record for the same individual. These multiple records can
+be merged together to create a single record to which all of the
+associated Trips are attached. To merge Customer records:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-View the details of the one of the records for the Customer.</p>
+View the details of one of the records for the Customer.</p>
 <p class="MsoListNumber">2.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <span class="ButtonChar">Merge</span> at the top-right of the
 page. A dialog is displayed requesting the name of the other
 Customer record:</p>
-<p class="Picture"><img border="0" width="205" height="79" id=
+<p class="Picture"><img border="0" width="302" height="113" id=
 "Picture 14" src="guide_files/image020.png" alt="image" name=
 "Picture 14"></p>
 <p class="MsoListNumber">3.<span style=
@@ -165,7 +165,7 @@ it appears in the dropdown.</p>
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <span class="ButtonChar">Confirm</span> to merge the two
 Customer records.</p>
-<h2><a name="_Toc433701861">Inactivate a Customer</a></h2>
+<h2><a name="_Toc470698525">Inactivate a Customer</a></h2>
 <p class="MsoNormal">Occasionally, a Customer may be restricted
 from requesting Trips (e.g., they have a recent history of no
 shows). As such, a Customer may be temporarily placed on the
@@ -181,7 +181,7 @@ of the page.</p>
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 A confirmation dialog is displayed asking you to provide a reason
 for the inactivation:</p>
-<p class="Picture"><img border="0" width="254" height="88" id=
+<p class="Picture"><img border="0" width="398" height="132" id=
 "Picture 15" src="guide_files/image021.png" alt="image" name=
 "Picture 15"></p>
 <p class="MsoListNumber">4.<span style=
@@ -204,7 +204,7 @@ request Trips.</i></p>
 </td>
 </tr>
 </table>
-<h2><a name="_Toc433701862">Activate a Customer</a></h2>
+<h2><a name="_Toc470698526">Activate a Customer</a></h2>
 <p class="MsoNormal">To re-activate an inactive Customer:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
