--- a/public/Guide/5_Runs.htm
+++ b/public/Guide/5_Runs.htm
@@ -15,7 +15,7 @@
 <div class="WordSection3">
 <div style=
 "border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in">
-<h1><a name="_Toc433701842">Runs</a></h1>
+<h1><a name="_Toc470698506">Runs</a></h1>
 </div>
 <p class="MsoNormal">Runs refer to individual routes driven by a
 Vehicle. A single Run may include multiple Customer Trips.</p>
@@ -23,9 +23,9 @@ Vehicle. A single Run may include multiple Customer Trips.</p>
 displays a summary of the defined Runs based on the selected
 Filter, and allows you to create new Runs, and to edit and delete
 existing Runs.</p>
-<p class="Picture"><img border="0" width="524" height="422" id=
-"Picture 41" src="guide_files/image013.png" alt="image" name=
-"Picture 41"></p>
+<p class="Picture"><img border="0" width="587" height="479" id=
+"Picture 233" src="guide_files/image013.png" alt="image" name=
+"Picture 233"></p>
 <p class="MsoNormal">The Runs page is divided into 3 areas:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -35,11 +35,12 @@ factors including date range and various Vehicle, Driver and Run
 attributes;</p>
 <p class="MsoListNumber">2.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-Calendar view of the Runs; and,</p>
+Calendar view of the Runs, which includes a checkbox to hide the
+calendar from view or re-display it; and,</p>
 <p class="MsoListNumber">3.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Table view of the Runs.</p>
-<h2><a name="_Toc433701843">Run Filters</a></h2>
+<h2><a name="_Toc470698507">Run Filters</a></h2>
 <p class="MsoNormal">To apply a filter:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -60,13 +61,13 @@ panel.</p>
 The Filter will be reset to the defaults, and the Calendar and
 Table views will be updated to display Runs that match the default
 filter.</p>
-<h2><a name="_Toc433701844">Display a Run</a></h2>
+<h2><a name="_Toc470698508">Display a Run</a></h2>
 <p class="MsoNormal">To view the details of a Run, either:</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Click the appropriate Run box in the Calendar view; or,</p>
-<p class="MsoListBullet"><span style=
+<p class="MsoListBullet" style='margin-left:.25in'><span style=
 'font-family:Symbol'>·<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
 Click <u><span style='color:blue'>View</span></u> next to the Run
@@ -74,7 +75,7 @@ in the Table view.</p>
 <p class="MsoNormal">Either way, the details of the selected Run
 will be displayed. To return to the Run Summary page, click
 <span class="ButtonChar">Back</span>.</p>
-<h2><a name="_Toc433701845">New Run</a></h2>
+<h2><a name="_Toc470698509">New Run</a></h2>
 <p class="MsoNormal">To create a new Run:</p>
 <p class="MsoListNumber">3.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -91,27 +92,27 @@ Enter all of the required information, and click <span class=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Assuming all of the entered Run information is validated, the Run
 will be created.</p>
-<h2><a name="_Toc433701846">Edit Run</a></h2>
+<h2><a name="_Toc470698510">Edit Run</a></h2>
 <p class="MsoNormal">To edit an existing Run:</p>
-<p class="MsoListNumber">1.<span style=
+<p class="MsoListNumber">7.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Display the details of the existing Run.</p>
-<p class="MsoListNumber">2.<span style=
+<p class="MsoListNumber">8.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <span class="ButtonChar">Edit</span> at the top-right of the
 page.</p>
-<p class="MsoListNumber">3.<span style=
+<p class="MsoListNumber">9.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 The Run details will be displayed in "Edit Mode" allowing the
 values to be edited:</p>
-<p class="MsoListNumber">4.<span style=
-'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-Make the appropriate edits, and click <span class=
-"ButtonChar">Update</span> at the top-right of the page.</p>
-<p class="MsoListNumber">5.<span style=
-'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-Assuming all of the edits are, the Run will be updated.</p>
-<h2><a name="_Toc433701847">Delete Run</a></h2>
+<p class="MsoListNumber">10.<span style=
+'font:7.0pt "Times New Roman"'>&nbsp;</span> Make the appropriate
+edits, and click <span class="ButtonChar">Update</span> at the
+top-right of the page.</p>
+<p class="MsoListNumber">11.<span style=
+'font:7.0pt "Times New Roman"'>&nbsp;</span> Assuming all of the
+edits are, the Run will be updated.</p>
+<h2><a name="_Toc470698511">Delete Run</a></h2>
 <p class="MsoNormal">To delete an existing Run:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
