--- a/public/Guide/7_CabTrips.htm
+++ b/public/Guide/7_CabTrips.htm
@@ -15,18 +15,18 @@
 <div class="WordSection3">
 <div style=
 "border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in">
-<h1><a name="_Toc433701852">Cab Trips</a></h1>
+<h1><a name="_Toc470698516">Cab Trips</a></h1>
 </div>
-<p class="MsoNormal">Instead of using one of their own vehicles, a
+<p class="MsoNormal">Instead of using one of its own vehicles, a
 Provider make schedule a private taxi to handle a Trip for a
 Customer.</p>
 <p class="MsoNormal">The <span class="ButtonChar">Cab Trips</span>
 tab displays a summary of the number of Trips scheduled for private
 taxi by day.</p>
-<p class="Picture"><img border="0" width="524" height="422" id=
-"Picture 19" src="guide_files/image016.png" alt="image" name=
-"Picture 19"></p>
-<h2><a name="_Toc433701853">Week Filter</a></h2>
+<p class="Picture"><img border="0" width="587" height="270" id=
+"Picture 229" src="guide_files/image016.png" alt="image" name=
+"Picture 229"></p>
+<h2><a name="_Toc470698517">Week Filter</a></h2>
 <p class="MsoNormal">By default, Cab Trips are shown for the
 current week. To display Cab Trips for a different week, use the
 date control at the top of the page:</p>
@@ -36,10 +36,11 @@ date control at the top of the page:</p>
 <p class="MsoNormal">Click the left and right arrows to retreat or
 advance the displayed week. Click <span class="ButtonChar">This
 Week</span> to redisplay the current week.</p>
-<h2><a name="_Toc433701854">Cab Trips by Day</a></h2>
+<h2><a name="_Toc470698518">Cab Trips by Day</a></h2>
 <p class="MsoNormal">To display the Trips scheduled to be handled
 by a private taxi on a specific day, click the hyperlink for the
-appropriate day.</p>
+appropriate day. This will take you to a screen where you can
+further review or edit the cab trips for the selected day.</p>
 <p class="MsoNormal">&nbsp;</p>
 <div style=
 "border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in">
