--- a/public/Guide/9_Drivers.htm
+++ b/public/Guide/9_Drivers.htm
@@ -15,17 +15,17 @@
 <div class="WordSection3">
 <div style=
 "border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 1.0pt 0in">
-<h1><a name="_Toc433701863">Drivers</a></h1>
+<h1><a name="_Toc470698527">Drivers</a></h1>
 </div>
 <p class="MsoNormal">Each Driver needs to be defined to capture
 their contact details, history and compliance.</p>
 <p class="MsoNormal">The <span class="ButtonChar">Drivers</span>
 tab displays a list of the defined Drivers, and allows you to
 create new Drivers, and update existing Drivers.</p>
-<p class="Picture"><img border="0" width="524" height="422" id=
-"Picture 28" src="guide_files/image022.png" alt="image" name=
-"Picture 28"></p>
-<h2><a name="_Toc433701864">Display a Driver</a></h2>
+<p class="Picture"><img border="0" width="587" height="224" id=
+"Picture 237" src="guide_files/image022.png" alt="image" name=
+"Picture 237"></p>
+<h2><a name="_Toc470698528">Display a Driver</a></h2>
 <p class="MsoNormal">To view the details of a Driver:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -35,7 +35,7 @@ Click the Driver name hyperlink in the table.</p>
 The details of the selected Driver will be displayed. To return to
 the Driver summary page, click <span class=
 "ButtonChar">Back</span>.</p>
-<h2><a name="_Toc433701865">New Driver</a></h2>
+<h2><a name="_Toc470698529">New Driver</a></h2>
 <p class="MsoNormal">To create a new Driver:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -44,9 +44,9 @@ top-right of the page.</p>
 <p class="MsoListNumber">2.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 A blank Driver details page is displayed:</p>
-<p class="Picture"><img border="0" width="524" height="422" id=
-"Picture 20" src="guide_files/image023.png" alt="image" name=
-"Picture 20"></p>
+<p class="Picture"><img border="0" width="587" height="451" id=
+"Picture 238" src="guide_files/image023.png" alt="image" name=
+"Picture 238"></p>
 <p class="MsoListNumber">3.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Enter all of the required information, and click <span class=
@@ -55,7 +55,7 @@ Enter all of the required information, and click <span class=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Assuming all of the entered Driver information is validated, the
 Driver will be created.</p>
-<h2><a name="_Toc433701866">Edit Driver</a></h2>
+<h2><a name="_Toc470698530">Edit Driver</a></h2>
 <p class="MsoNormal">To edit an existing Driver:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -76,11 +76,12 @@ Make the appropriate edits, and click <span class=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Assuming all of the edits are validated, the Driver will be
 updated.</p>
-<h2><a name="_Toc433701867">Driver Documentation</a></h2>
+<h2><a name="_Toc470698531">Driver Documentation</a></h2>
 <p class="MsoNormal">Documents related to the Driver can be
-uploaded into the system. These documents can then be related to
-History and Compliance Events.</p>
-<h3><a name="node37" id="node37"></a>View a Driver Document</h3>
+uploaded into the system. These documents can then be associated
+with History and Compliance Events that need to be tracked for the
+Driver.</p>
+<h3><a name="node0" id="node0"></a>View a Driver Document</h3>
 <p class="MsoNormal">To view any of the uploaded Driver
 documents:</p>
 <p class="MsoListNumber">1.<span style=
@@ -88,28 +89,29 @@ documents:</p>
 View the details of the existing Driver.</p>
 <p class="MsoListNumber">2.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-In the “Driver Documentation” panel, click the <span class=
-"ButtonChar">Description</span> hyperlink in a document row.</p>
+In the “Driver Documentation” panel, click the hyperlink in the
+<span class="ButtonChar">Description</span> column for the document
+that you wish to view.</p>
 <p class="MsoListNumber">3.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 The selected document is downloaded to your computer in preparation
 for opening.</p>
-<h3><a name="node38" id="node38"></a>Add a Driver Document</h3>
+<h3><a name="node1" id="node1"></a>Add a Driver Document</h3>
 <p class="MsoNormal">To upload a document for a Driver:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 View the details of the existing Driver.</p>
 <p class="MsoListNumber">2.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-Click <span class="ButtonChar">Add document</span> at the top-right
-of the page.</p>
+Click the <span class="ButtonChar">Add document</span> button at
+the top-right of the page.</p>
 <p class="MsoListNumber">3.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 A <span class="ButtonChar">Upload new document</span> page is
 displayed allowing the document to be selected:</p>
-<p class="Picture"><img border="0" width="253" height="181" id=
-"Picture 31" src="guide_files/image024.png" alt="image" name=
-"Picture 31"></p>
+<p class="Picture"><img border="0" width="587" height="237" id=
+"Picture 239" src="guide_files/image024.png" alt="image" name=
+"Picture 239"></p>
 <p class="MsoListNumber">4.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Enter a description for the document, and select <span class=
@@ -118,9 +120,9 @@ Enter a description for the document, and select <span class=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <span class="ButtonChar">Save</span> to upload the
 document.</p>
-<h3><a name="node39" id="node39"></a>Edit a Driver Document</h3>
-<p class="MsoNormal">To edit a previously uploaded document for a
-Driver:</p>
+<h3><a name="node2" id="node2"></a>Edit a Driver Document</h3>
+<p class="MsoNormal">To updated a previously uploaded document for
+a Driver with a new version of the document:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 View the details of the existing Driver.</p>
@@ -130,18 +132,18 @@ In the “Driver Documentation” panel, click <span class=
 "ButtonChar">Edit</span> in a document row.</p>
 <p class="MsoListNumber">3.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-The Document will be displayed in "Edit Mode" allowing the values
-to be edited.</p>
+The Document will be displayed in "Edit Mode" allowing a new
+document file to be uploaded.</p>
 <p class="MsoListNumber"><span class="ButtonChar"><span style=
 'color:windowtext; font-weight:normal'>4.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span></span>
 Enter a description for the document, and select <span class=
-"ButtonChar">Choose File</span> to select the file to upload.</p>
+"ButtonChar">Choose File</span> to locate and upload the file.</p>
 <p class="MsoListNumber">5.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <span class="ButtonChar">Save</span> to update the
 Document.</p>
-<h3><a name="node40" id="node40"></a>Delete a Driver Document</h3>
+<h3><a name="node3" id="node3"></a>Delete a Driver Document</h3>
 <p class="MsoNormal">To delete a previously uploaded document for a
 Driver:</p>
 <p class="MsoListNumber">6.<span style=
@@ -173,13 +175,13 @@ delete the document.</span></span></p>
 <p class="MsoListNumber">11.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;</span> Click <span class=
 "ButtonChar">Save</span> to update the Driver.</p>
-<h2><a name="_Toc433701868">Driver Events</a></h2>
+<h2><a name="_Toc470698532">Driver Events</a></h2>
 <p class="MsoNormal">To maintain a historical record regarding each
-Driver and to log compliance with various events, History and
+Driver and to log compliance-related actions, History and
 Compliance Events can be entered.</p>
 <p class="MsoNormal">Existing events are displayed in the
 <em>History Events</em> or <em>Compliance Events</em> panels.</p>
-<h3><a name="node41" id="node41"></a>Add a Driver Event</h3>
+<h3><a name="node4" id="node4"></a>Add a Driver Event</h3>
 <p class="MsoNormal">To add a new History or Compliance Event for a
 Driver:</p>
 <p class="MsoListNumber">1.<span style=
@@ -218,7 +220,12 @@ Click <span class="ButtonChar">Save</span> to add the event.</p>
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <span class="ButtonChar">Save</span> to update the
 Driver.</p>
-<h3><a name="node42" id="node42"></a>Delete a Driver Event</h3>
+<p class="MsoListNumber" style='margin-left:0in;text-indent:0in'>
+<i>Note: To add a recurring Driver Compliance Event that will apply
+to all drivers on a recurring basis, go to the Admin tab and select
+the</i> <span class="HyperlinkTextChar">Recurring Driver Compliance
+Events</span> <i>link.</i></p>
+<h3><a name="node5" id="node5"></a>Delete a Driver Event</h3>
 <p class="MsoNormal">To delete an existing event for a Driver:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -251,7 +258,7 @@ delete the event.</span></span></p>
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 Click <span class="ButtonChar">Save</span> to update the
 Driver.</p>
-<h2><a name="_Toc433701869">Delete a Driver</a></h2>
+<h2><a name="_Toc470698533">Delete a Driver</a></h2>
 <p class="MsoNormal">To delete an existing Driver:</p>
 <p class="MsoListNumber">1.<span style=
 'font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
